--- a/bin/config
+++ b/bin/config
@@ -1,5 +1,5 @@
 const.maxVar=10000
 const.maxClause=10000
-const.maxIterations=100
+const.maxIterations=2000
 const.null=0
-param.strategy=bayesian
+param.strategy=frequentist
