Added MVP, fixed a bug in reading CNF file (for intel case study)

--- a/bin/config
+++ b/bin/config
@@ -6,8 +6,9 @@ const.null=0
 param.strategy=best
 param.bias=variable
 param.biasPeriod=1
-param.run=1
+param.run=10
 param.randomBias=0.5
 param.mvp.MVP_BRANCHFACTOR=2
-param.mvp.MVP_PATHLENGTH=5
-param.mvp.MVP_LEAFCAP=25
+param.mvp.MVP_PATHLENGTH=1000
+param.mvp.MVP_LEAFCAP=1000
+param.mvp.enable=0
