--- a/bin/config
+++ b/bin/config
@@ -1,6 +1,6 @@
-const.maxVar=10000
-const.maxClause=10000
-const.maxIterations=10000
+const.maxVar=20000
+const.maxClause=20000
+const.maxIterations=100000
 param.training=100
 const.null=0
 param.strategy=best
@@ -12,3 +12,5 @@ param.mvp.MVP_BRANCHFACTOR=2
 param.mvp.MVP_PATHLENGTH=1000
 param.mvp.MVP_LEAFCAP=1000
 param.mvp.enable=0
+param.learning=0
+param.constantpropagation=1
