--- a/bin/config
+++ b/bin/config
@@ -1,16 +1,17 @@
 const.maxVar=20000
 const.maxClause=20000
-const.maxIterations=100000
+const.maxIterations=50000
 param.training=100
 const.null=0
 param.strategy=best
 param.bias=variable
 param.biasPeriod=1
-param.run=10
+param.run=20
 param.randomBias=0.5
+param.explorationBias=0.0
 param.mvp.MVP_BRANCHFACTOR=2
 param.mvp.MVP_PATHLENGTH=1000
 param.mvp.MVP_LEAFCAP=1000
 param.mvp.enable=0
 param.learning=0
-param.constantpropagation=1
+param.constantpropagation=0
